<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ga_trackingId">UA-36132932-1</string>
    <string name="app_name">Draw Over Apps</string>
    <string name="title_activity_draw_surface">Draw Over Apps</string>
    <string name="button_hide">Hide</string>
    <string name="button_HDMI1">HDMI1</string>
    <string name="button_HDMI2">HDMI2</string>
    <string name="button_HDMI3">HDMI3</string>
    <string name="button_VGA">VGA</string>
    <string name="button_open">Open</string>
    <string name="button_save">Save</string>
    <string name="button_show">Show</string>
    <string name="button_paint">Paint</string>
    <string name="button_brush">Edit</string>
    <string name="button_help">Help</string>
    <string name="button_quit">Quit</string>
    <string name="button_center">Center</string>
    <string name="open_file">Open File</string>    
    <string name="desc_colors">Color Select:</string>
    <string name="desc_brush_size">Stroke Size:</string>
    <string name="desc_brush_style">Stroke Style:</string>
    <string name="desc_brush_per_app_canvas">Per App Canvas</string>
    <string name="desc_brush_erase_all">Clear Screen</string>
    <string name="cont_desc_drag_handle">Drag this around to move the menu around the screen</string>
    <string name="cont_desc_eraser">Eraser</string>
    <string name="cont_desc_hard">Hard brush</string>
    <string name="cont_desc_med_hard">Medium hard brush</string>
    <string name="cont_desc_soft">Soft Brush</string>
    <string name="cont_desc_close_help">Close help</string>
    <string name="notification_ticker_text">Pull down for %1$s</string>
    <string name="notification_content_text">Expand this notification.</string>
    <string name="notification_content_subtext">Touch Go to start.</string>
    <string name="notification_content_text_v14">Tap here to show/hide</string>
    <string name="action_show">Go</string>
    <string name="action_hide">Hide</string>
    <string name="action_quit">Quit</string>
    <string name="toast_min">Touch the screen to bring back buttons</string>
    <string name="help_title">Draw Over Apps Help:</string>
    <string name="whats_new_title">Whats new in this Version:</string>
    <string name="save_path">/mnt/usb/sda1/</string>
    
     <string-array name="str_arr_input_source_vals">
        <item>VGA</item>
        <item>ATV</item>
        <item>CVBS</item>
        <item>CVBS2</item>
        <item>CVBS3</item>
        <item>CVBS4</item>
        <item>CVBS5</item>
        <item>CVBS6</item>
        <item>CVBS7</item>
        <item>CVBS8</item>
        <item>CVBS_MAX</item>
        <item>SVIDEO</item>
        <item>SVIDEO2</item>
        <item>SVIDEO3</item>
        <item>SVIDEO4</item>
        <item>SVIDEO_MAX</item>
        <item>YPBPR1</item>
        <item>YPBPR2</item>
        <item>YPBPR3</item>
        <item>YPBPR_MAX</item>
        <item>SCART</item>
        <item>SCART2</item>
        <item>SCART_MAX</item>
        <item>HDMI1</item>
        <item>HDMI2</item>
        <item>HDMI3</item>
        <item>HDMI4</item>
        <item>HDMI_MAX</item>
        <item>DTV</item>
    </string-array>   
    
</resources>
