<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    android:id="@+id/savefileRoot" 
    android:background="@color/background" 
    android:layout_width="@dimen/brush_settings_total_width" 
    android:layout_height="@dimen/display_show_height"
    xmlns:android="http://schemas.android.com/apk/res/android">

    
    <TextView android:id="@+id/colorDesc3" 
        android:layout_width="fill_parent" 
        android:layout_height="@dimen/brush_settings_title_height" 
        android:text="@string/desc_colors" 
        android:layout_alignParentLeft="true" 
        android:layout_alignParentTop="true" />
    
   

    <ImageView
        android:id="@id/saveFileCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/brush_settings_title_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/cont_desc_close_help"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/colorDesc3"
        android:layout_weight="0.34" >

         <EditText
            android:id="@id/editText_save_name"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dip"
            android:inputType="text" 
            android:gravity="center"
            
            
            android:singleLine="true" />

        <Button
            android:id="@id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

    </LinearLayout>
    

</RelativeLayout>