<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    android:id="@+id/openfileRoot" 
    android:background="@color/background" 
    android:layout_width="@dimen/brush_settings_total_width" 
    android:layout_height="@dimen/display_show_height"
    android:descendantFocusability= "blocksDescendants"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <TextView android:id="@+id/colorDesc1" 
        android:layout_width="fill_parent" 
        android:layout_height="@dimen/brush_settings_title_height" 
        android:text="@string/open_file" 
        android:layout_alignParentLeft="true" 
        android:layout_alignParentTop="true" />
    
   

    <ImageView
        android:id="@id/openFileCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/brush_settings_title_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/cont_desc_close_help"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />
 
    
    <Button
        android:id="@id/button_open"
        android:layout_width="880dip"
        android:layout_height="60dip"
        android:layout_below="@id/colorDesc1"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:drawSelectorOnTop="false"
       android:text="@string/button_open" 
        android:scrollbars="none"
        android:scrollingCache="true" />
    
    <ListView
        android:id="@id/videoFileList"
        android:layout_width="880dip"
        android:layout_height="300dip"
        android:layout_below="@id/button_open"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:drawSelectorOnTop="false"
        android:listSelector="@drawable/list_selector"
        android:scrollbars="none"
        android:scrollingCache="true" />

    

</RelativeLayout>

